--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Student Command Center</title>
+<title>Student Profile Center</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap" rel="stylesheet">
 
@@ -10,8 +10,8 @@
 body{
     margin:0;
     font-family:'Montserrat',sans-serif;
-    background:#ffffff;
-    color:#020617;
+    background:#f9fafb;
+    color:#1e293b;
 }
 header{
     display:flex;
@@ -19,10 +19,10 @@ header{
     gap:20px;
     padding:20px 30px;
     background:#ffffff;
-    border-bottom:2px solid #e5e7eb;
+    border-bottom:2px solid #e2e8f0;
 }
 header img{
-    height:70px;
+    height:65px;
 }
 header .title{
     flex:1;
@@ -31,9 +31,11 @@ header .title{
 header h1{
     margin:0;
     font-weight:700;
+    color:#1e293b;
 }
 header p{
     margin:5px 0 0;
+    color:#475569;
 }
 .layout{
     display:grid;
@@ -43,19 +45,19 @@ header p{
     margin:25px auto;
 }
 .panel{
-    background:#f8fafc;
+    background:#ffffff;
     padding:20px;
     border-radius:12px;
-    box-shadow:0 6px 15px rgba(0,0,0,0.08);
+    box-shadow:0 8px 20px rgba(0,0,0,0.06);
 }
 .panel h2{
-    color:#0f172a;
+    color:#1e293b;
 }
 .profile img{
     display:block;
     margin:auto;
     border-radius:50%;
-    border:3px solid #0f172a;
+    border:3px solid #2563eb;
 }
 .center{
     display:flex;
@@ -63,30 +65,31 @@ header p{
     gap:20px;
 }
 svg text{
-    fill:#020617;
+    fill:#1e293b;
     font-size:18px;
+    font-weight:600;
 }
 canvas{
     background:#ffffff;
     border-radius:8px;
-    border:1px solid #e5e7eb;
+    border:1px solid #e2e8f0;
 }
 button{
-    background:#0f172a;
+    background:#2563eb;
     color:white;
     border:none;
     padding:10px;
-    margin:5px 0;
+    margin:6px 0;
     width:100%;
     border-radius:6px;
     cursor:pointer;
     font-weight:600;
 }
 button:hover{
-    background:#020617;
+    background:#1d4ed8;
 }
 #task{
-    background:#22c55e;
+    background:#16a34a;
     color:white;
     padding:10px;
     text-align:center;
@@ -94,10 +97,11 @@ button:hover{
     cursor:grab;
 }
 #dropzone{
-    border:2px dashed #0f172a;
+    border:2px dashed #2563eb;
     padding:20px;
     margin-top:15px;
     min-height:70px;
+    color:#475569;
 }
 .bottom{
     width:95%;
@@ -106,13 +110,20 @@ button:hover{
     grid-template-columns:1fr 1fr;
     gap:20px;
 }
+ul{
+    padding-left:20px;
+}
+li{
+    margin-bottom:6px;
+    color:#334155;
+}
 </style>
 </head>
 
 <body onload="getLocation()">
 
 <header>
-    <img src="vitap-logo.png">
+    <img src="vitaplogored.b14c9929.png">
     <div class="title">
         <h1>Student Command Center</h1>
         <p>HTML5 Interactive Learning Hub</p>
@@ -122,10 +133,10 @@ button:hover{
 <div class="layout">
 
     <div class="panel profile">
-        <h2>Student Profile</h2>
+        <h2>Student Details</h2>
         <img src="WhatsApp Image 2025-07-16 at 13.41.43_c0d4ad7c.jpg" height="160">
         <p><b>Name:</b> Piyush Puru</p>
-        <p><b>Branch:</b> CSE</p>
+        <p><b>Branch:</b> CSE CORE</p>
         <p><b>University:</b> VIT-AP</p>
     </div>
 
@@ -136,7 +147,7 @@ button:hover{
             <svg width="140" height="140">
                 <circle cx="70" cy="70" r="60" fill="#e5e7eb"/>
                 <circle cx="70" cy="70" r="60" fill="none"
-                        stroke="#0f172a"
+                        stroke="#2563eb"
                         stroke-width="10"
                         stroke-dasharray="377"
                         stroke-dashoffset="339"/>
@@ -161,10 +172,10 @@ button:hover{
 
         <h2>Task Control</h2>
         <div id="task" draggable="true" ondragstart="drag(event)">
-            Complete HTML5 Lab
+            Complete HTML Lab
         </div>
         <div id="dropzone" ondragover="allowDrop(event)" ondrop="drop(event)">
-            Drop Task Here
+            Drop Your Task Here!
         </div>
     </div>
 
@@ -184,7 +195,7 @@ button:hover{
     </div>
 
     <div class="panel">
-        <h2>HTML5 Features Used</h2>
+        <h2>HTML Concepts Used</h2>
         <ul>
             <li>SVG</li>
             <li>Canvas</li>
@@ -211,7 +222,7 @@ for(let i=20;i<=180;i+=40){
     ctx.stroke();
 }
 
-ctx.strokeStyle="#0f172a";
+ctx.strokeStyle="#2563eb";
 ctx.lineWidth=3;
 ctx.beginPath();
 ctx.moveTo(40,160);
@@ -221,7 +232,7 @@ ctx.lineTo(280,130);
 ctx.lineTo(360,90);
 ctx.stroke();
 
-ctx.fillStyle="#0f172a";
+ctx.fillStyle="#1e293b";
 [160,140,110,130,90].forEach((y,i)=>{
     ctx.beginPath();
     ctx.arc(40+80*i,y,4,0,Math.PI*2);
