--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@ li{
         <p><b>Name:</b> Piyush Puru</p>
         <p><b>Branch:</b> CSE CORE</p>
         <p><b>University:</b> VIT-AP</p>
+        <p><b>CGPA:</b> 9.17</p>
     </div>
 
     <div class="center">
