--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@ li{
         <h2>Student Details</h2>
         <img src="WhatsApp Image 2025-07-16 at 13.41.43_c0d4ad7c.jpg" height="160">
         <p><b>Name:</b> Piyush Puru</p>
+        <p><b>Reg No:</b> 23BCE8464</p>
         <p><b>Branch:</b> CSE CORE</p>
         <p><b>University:</b> VIT-AP</p>
         <p><b>CGPA:</b> 9.17</p>
